Wallet updated.
