# src/main/resources/api/openapi.yaml
@@ -113,6 +113,7 @@ components:
         - spendingHeight
         - inclusionHeight
         - spent
+        - applicationId
       properties:
         box:
           $ref: '#/components/schemas/ErgoTransactionOutput'
@@ -162,6 +163,12 @@ components:
           type: integer
           format: int32
           example: 2
+        applicationId:
+          description: Application identifier (set to `1` by default - `SimplePayments`)
+          type: integer
+          format: int16
+          example: 1
+          default: 1
 
     ErgoTransaction:
       type: object
